<resources>
    <string name="app_name" translatable="false">ft_hangouts</string>
    <string name="menu_nav_settings">Settings</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="fragment_contact_list_label">Contacts</string>
    <string name="fragment_contact_edit_label">Edit Contact</string>
    <string name="name">Name</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="contact_phone_number">Contact Phone Number</string>
    <string name="action_pre_seed">Pre-seed</string>
    <string name="action_clear">Clear</string>
    <string name="contact_avatar">Avatar</string>
    <string name="search_contact">Search contact</string>
    <string name="action_search">Search</string>
    <string name="style_header">Style</string>
    <string name="appbar_color_title">AppBar Color</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="contact_blank_error">Contact info cannot be blank!</string>
    <string name="theme_material_you" translatable="false">MaterialYou</string>
    <string name="theme_red">Red</string>
    <string name="theme_blue">Blue</string>
    <string name="theme_fuchsia">Fuchsia</string>
    <string name="theme_olive">Olive</string>
    <string name="theme_silver">Silver</string>
    <string name="theme_teal">Teal</string>
    <string name="action_delete">Delete</string>
    <string name="prompt_confirm_delete">Are you sure you want to proceed with the deletion?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="menu_nav_contact_list">Contacts</string>
    <string name="menu_nav_inbox">Messages</string>
    <string name="fragment_conversation_list_label">Conversations</string>
    <string name="unread">Unread</string>
    <string name="message_with_sender">%1$s: %2$s</string>
    <string name="search_conversation">Search</string>
    <string name="fragment_conversation_create_label">New Conversation</string>
    <string name="type_message">Type a message…</string>
    <string name="send_message">Send message</string>
    <string name="permission_not_granted_send_sms">Permission to send SMS has not been granted</string>
    <string name="permission_not_granted_receive_sms">Permission to receive SMS has not been granted</string>
</resources>